--- a/Sign-up Form.css
+++ b/Sign-up Form.css
@@ -13,9 +13,9 @@ body {
     align-items:flex-start;
     position: relative;
     width: 38vw;
-    height: clamp(395px, 120vh, 400px);
+    height: 110vh;
     background-image: url(bg_image.jpg);
-    background-size: 100% 100%;
+    background-size: 120% 120%;
     background-repeat: no-repeat;
     padding-top: 5rem;
 }
